Fix information box css - information cards were overlapping side of flex box (due to min width)
- added flex-wrap: wrap; to information flex box

--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
